updated the logo and services

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg  fixed-top custom-navbar">
         <div class="container d-flex m-0">
             <a class="navbar-brand me-1" href="index.html">
-                <img src="images/wellbeingexpressionlogo.webp" alt="Wellbeing Expression Logo" class="rounded " style="height:40px; border:1px solid black;"> 
+                <img src="images/wellbeing-expression-logo.png" alt="Wellbeing Expression Logo" class="rounded " style="height:40px; border:1px solid black;"> 
             </a>
             <div class="heading-nav">Wellbeing Expression</div>
             <button class="navbar-toggler mx-auto  d-flex justify-self-center align-items-center d-md-block d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
@@ -238,7 +238,7 @@
     <!-- Footer -->
     <footer class="footer-section">
         <div class="container text-center">
-            <img src="images/wellbeingexpressionlogo.webp" alt="Wellbeing Expression Logo" class="rounded " style="height:50px; border:1px solid black;"> 
+            <img src="images/wellbeing-expression-logo.png" alt="Wellbeing Expression Logo" class="rounded " style="height:50px; border:1px solid black;"> 
             <p>&copy; 2024 Wellbeing Expression. All rights reserved.</p>
             <a href="https://www.facebook.com/relaxkidsanglesey" target="_blank">
                 <i class="fab fa-facebook"></i> Facebook Page
