--- a/policy.html
+++ b/policy.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Wellbeing Expression Logo">
+        <img src="images/wellbeing-expression-logo.png" alt="Wellbeing Expression Logo">
         <h1>Wellbeing Expression</h1>
         <p>Contact us at <a href="mailto:wellbeingexpression@gmail.com">wellbeingexpression@gmail.com</a> or call +44 7367 292269</p>
         <a class="nav-link custom-link" href="index.html">
