--- a/services.html
+++ b/services.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top custom-navbar">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="images/wellbeingexpressionlogo.webp" alt="Wellbeing Expression Logo" class="rounded " style="height:40px; border:1px solid black;"> 
+                <img src="images/wellbeing-expression-logo.png" alt="Wellbeing Expression Logo" class="rounded " style="height:40px; border:1px solid black;"> 
             </a>
             <div class="heading-nav">Wellbeing Expression</div>
             <button class="navbar-toggler mx-auto  d-flex justify-self-center align-items-center d-md-block d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
@@ -47,11 +47,6 @@
                     <li class="nav-item">
                         <a class="nav-link custom-link" href="#corporate-workshops">
                              Corporate Workshops 
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link custom-link" href="#school-programmes">
-                             School Programmes 
                         </a>
                     </li>
                     <li class="nav-item">
@@ -99,7 +94,7 @@
                         <ul>
                             <li><strong>Duration:</strong> 2 hours</li>
                             <li><strong>Group Size:</strong> 5-10 participants</li>
-                            <li><strong>Price:</strong> £200 - £250 per session</li>
+                            <li><strong>Price:</strong> £250 - £350 per session</li>
                         </ul>
                         <a href="#contact" class="btn custom-btn mt-3">Book a Workshop</a>
                     </div>
@@ -117,7 +112,7 @@
                         <p>Our private sessions on Anglesey offer personalised support to help you process emotions, increase resilience, and foster personal growth. Ideal for those seeking one-on-one guidance in a confidential setting.</p>
                         <ul>
                             <li><strong>Duration:</strong> 1 hour</li>
-                            <li><strong>Price:</strong> £30 per session</li>
+                            <li><strong>Price:</strong> £50 per session</li>
                         </ul>
                         <a href="#contact" class="btn custom-btn mt-3">Schedule a Session</a>
                     </div>
@@ -138,25 +133,6 @@
                             <li><strong>Price:</strong> Starting from £500</li>
                         </ul>
                         <a href="#contact" class="btn custom-btn mt-3">Enquire Now</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Service 4: School Programmes -->
-            <div id="school-programmes" class="service-item mb-5">
-                <div class="row align-items-center">
-                    <div class="col-md-6">
-                        <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730287075/Special_Programmes_for_Schools_w5v9f0.jpg" alt="School Art Therapy Programmes North Wales" class="img-fluid rounded shadow">
-                    </div>
-                    <div class="col-md-6">
-                        <h3>School Art Therapy Programmes in North Wales</h3>
-                        <p>Our school-based programmes help students explore emotions, develop social skills, and foster emotional resilience. Available across primary and secondary schools in North Wales.</p>
-                        <ul>
-                            <li><strong>Duration:</strong> Customisable for individual or ongoing sessions</li>
-                            <li><strong>Age Groups:</strong> Primary and secondary students</li>
-                            <li><strong>Price:</strong> Contact us for details</li>
-                        </ul>
-                        <a href="#contact" class="btn custom-btn mt-3">Contact for Details</a>
                     </div>
                 </div>
             </div>
@@ -203,7 +179,7 @@
     <!-- Footer -->
     <footer class="footer-section">
         <div class="container text-center">
-            <img src="images/wellbeingexpressionlogo.webp" alt="Wellbeing Expression Logo" class="footer-logo rounded mb-3" style="height:100px; border:1px solid black;"">
+            <img src="images/wellbeing-expression-logo.png" alt="Wellbeing Expression Logo" class="footer-logo rounded mb-3" style="height:100px; border:1px solid black;"">
             <p>&copy; 2024 Wellbeing Expression. All rights reserved.</p>
             <a href="https://www.facebook.com/relaxkidsanglesey" target="_blank">
                 <i class="fab fa-facebook"></i> Facebook Page
