--- a/services.html
+++ b/services.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Creative Wellbeing, Art Therapy in Holyhead, Mental Health Support North Wales, Corporate Wellness Gwynedd, Group Therapy Workshops North Wales, One-to-One Art Therapy Anglesey">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/wellbeing-expression-logo.png" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Fonts -->
