change the description on index page

--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
                     At Wellbeing Expression, we provide a safe, welcoming space where individuals can engage in various forms of creativity for well-being and mental health. Our sessions focus on creativity without the need for prior skills or expectations.
                 </p>
                 <p>
-                    We offer a range of activities including visual arts, music, writing, pottery, and sensory-focused experiences designed to be relaxing and therapeutic.
-                </p>
+                    We offer a range of mindful and creative activities, including guided visualisation, each thoughtfully designed to be calming, expressive, and supportive of emotional balance and self-awareness.                </p>
                 <div class="d-flex justify-content-center align-items-center my-2 py-2">
                     <a href="services.html" class="btn custom-btn">Services We Provide</a>
                     <button type="button" class="btn custom-btn ms-3" data-bs-toggle="modal" data-bs-target="#bioModal">Read May's Bio</button>
@@ -154,8 +153,7 @@
             <div class="row align-items-center d-flex justify-content-center align-items-center">
                 <div class="col-lg-6">
                     <p>
-                        Our creative workshops are designed for everyone who wishes to heal any aspect of their mental, emotional, or physical well-being. Whether you want to explore your emotions or simply enjoy a creative outlet, our workshops provide the perfect environment.
-                    </p>
+                        Our creative workshops are open to anyone looking to support their mental, emotional, or physical wellbeing. Whether you're seeking a space to explore your emotions or simply want to unwind in a mindful, supportive environment, our workshops offer a nurturing space for healing, reflection, and self-expression.                    </p>
                     <p>
                         We believe in creating inclusive environments that recognize and address unique challenges while promoting empowerment and dignity. By fostering compassion and enhancing accessibility, we aim to serve and uplift everyone, ensuring that all individuals can thrive.
                     </p>
