remove the music

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                 <div class=" col-md-4 col-lg-4 mb-4">
                     <div class="text-center p-4 rounded shadow service-item">
                         <img src="images/musicandwriting.jpg" class="img-fluid py-2">
-                        <h3 class="text-white">Music & Writing</h3>
-                        <p >Explore self-expression through music and creative writing workshops.</p>
+                        <h3 class="text-white">Creative Writing</h3>
+                        <p >Explore self-expression through creative writing workshops.</p>
                         <div class="d-flex justify-content-center align-items-center my-2 py-2">
                             <a href="services.html" class="btn custom-btn  "> Find A Service That Suites You</a>
                         </div>
