--- a/policy.html
+++ b/policy.html
@@ -113,7 +113,7 @@
         <p>If you have any questions about this Privacy Policy, please contact us:</p>
         <ul>
             <li>Email: <a href="mailto:wellbeingexpression@gmail.com">wellbeingexpression@gmail.com</a></li>
-            <li>Phone: +44 7367 292269</li>
+            <li>Phone: 07572980609</li>
         </ul>
     </section>
 
@@ -157,7 +157,7 @@
         <p>If you have any questions about these Terms of Service, please contact us:</p>
         <ul>
             <li>Email: <a href="mailto:wellbeingexpression@gmail.com">wellbeingexpression@gmail.com</a></li>
-            <li>Phone: +44 7367 292269</li>
+            <li>Phone: 07572980609</li>
         </ul>
     </section>
 
